webview-log.txt
Congratulations, your extension "BEC" is now active!
error: Error: Command failed: ocaml d:\Desktop\ocaml_Test\test.ml
File "d:\Desktop\ocaml_Test\test.ml", line 14, characters 19-26:
14 | let test = process appInfo;;
                        ^^^^^^^
Error: This expression has type string * float
       but an expression was expected of type string * string
       Type float is not compatible with type string 

output message: File "d:/Desktop/ocaml_Test/test.ml", line 14, characters 19-26:
14 | let test = process appInfo;;
                        ^^^^^^^
Error: This expression has type string * float
       but an expression was expected of type string * string
       Type float is not compatible with type string 

output errors: File "d:/Desktop/ocaml_Test/test.ml", line 14, characters 19-26:
14 | let test = process appInfo;;
                        ^^^^^^^
Error: This expression has type string * float
       but an expression was expected of type string * string
       Type float is not compatible with type string 

output result:         OCaml version 4.12.0

val parse_version : string -> string = <fun>
val show_major : string -> string = <fun>
val appInfo : string * float = ("My Application", 1.5)
val process : string * string -> string = <fun>

toggle panel clicked in webview
Incrementing request values
Sent request to Google Generative AI
<div>
<h2>Error Type</h2>
<p>Type Mismatch</p>
<h2>Error Origin</h2>
<ul>
<li>The <code>process()</code> function expects two string arguments.</li>
<li>The <code>appInfo</code> tuple contains a string and a float.</li>
</ul>
<h2>Error Data Flow Explanation</h2>
<ul>
<li>The <code>process()</code> function is called with the <code>appInfo</code> tuple.</li>
<li>The first element of the tuple is a string, which matches the expected type.</li>
<li>The second element of the tuple is a float, which does not match the expected type of string.</li>
</ul>
<h2>Solution Suggestion</h2>
<ul>
<li>Change the type of the second element of the <code>appInfo</code> tuple to string.</li>
<code><span style="white-space: nowrap;">let appInfo = ("My Application", "1.5");;</span></code>
<li>Create a new function that takes a string and a float as arguments and returns a string.</li>
<code><span style="white-space: nowrap;">let process (name, vers) = name ^ show_major (float_of_string vers);;</span></code>
</ul>
<h2>Useful Links</h2>
<ul>
<li><a href="https://www.google.com/search?q=This+expression+has+type+string+%2A+float+but+an+expression+was+expected+of+type+string+%2A+string+Type+float+is+not+compatible+with+type+string">Google Search</a><code>: This expression has type string * float but an expression was expected of type string * string. Type float is not compatible with type string</code> </li>
<li><a href="https://ocaml.org/docs/common-errors">Common OCaml Errors</a></li>
<li><a href="https://ocaml.org/manual/5.2/index.html">OCaml Manual</a></li>
</ul>
</div>
